--- a/OS_Final/.project
+++ b/OS_Final/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>OS_Class</name>
+	<name>OS_Final</name>
 	<comment></comment>
 	<projects>
 	</projects>
